--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.37",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.32"
