--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.37",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
+    "swagger-jsdoc": "^7.0.0-rc.6",
+    "swagger-ui-express": "^4.1.6",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.32"
   }
