--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 3000
 TYPEORM_CONNECTION = postgres
-TYPEORM_HOST = https://project-mesa.herokuapp.com/
+TYPEORM_HOST = localhost
 TYPEORM_USERNAME = postgres
 TYPEORM_PASSWORD = postgres
 TYPEORM_DATABASE = Mesa
