--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc; cd build; node index.js",
+    "start": "npx tsc; cd app; node index.js",
     "test": "npx jest",
     "test:coverage": "npx jest --coverage"
   },
